[package]
name = "buggo"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]

[dependencies]
diesel = { version = "^1.3.0", features = ["sqlite"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "^0.9.0"
juniper = "*"
juniper_relay = "*"
derive_builder = "*"
juniper_rocket = "*"
rocket = "0.3.11"
rocket_codegen = "0.3.11"
base64 = "~0.6.0"
ring = "*"
